--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
-body {
-  margin: 0;
+html, body {
   padding: 0;
-  font-family: sans-serif;
+  margin: 0;
+  height: 100%;
+  background-color: #48dbfb;
 }
