--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -1,6 +1,5 @@
-html, body {
-  padding: 0;
+body {
   margin: 0;
-  height: 100%;
-  background-color: #48dbfb;
+  padding: 0;
+  font-family: sans-serif;
 }
